# robonomics_tutorials

./: README.md
01_broadcast_demand/: objective.bag  test_demand_mainnet.yaml
02_broadcast_offer/: README.html  README.md  main.py
03_trader/: README.md  default.nix  result
03_trader/scripts/: trader.py
04_trader_with_acl/: CMakeLists.txt  default.nix  result  test_demand_mainnet.yaml
04_trader_with_acl/scripts/: trader.py
05_open_sensor_data/: CMakeLists.txt  README.md  default.nix  package.xml
05_open_sensor_data/robonomics/: model.txt
05_open_sensor_data/scripts/: worker.py
broadcast_demand/: README.md  default.nix  main.py
broadcast_offer/: default.nix  test_offer_mainnet.yaml
hello_aira_dapp/src/: App.vue  config.js
hello_aira_dapp/src/components/: Hello.vue  Trade.vue
trader/: CMakeLists.txt  package.xml
trader/robonomics/: model.txt
trader_with_acl/: README.md  package.xml
trader_with_acl/robonomics/: model.txt
