<?xml version="1.0"?>
<package format="2">
  <name>open_sensor_data_pkg</name>
  <version>0.1.0</version>
  <description>Example replying with a result for a demand</description>

  <maintainer email="vadim.razorq@gmail.com">Vadim Manaenko</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>robonomics_msgs</exec_depend>

</package>
